--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "google-spreadsheet": "^2.0.1",
+    "lodash": "^4.12.0",
     "uuid": "^2.0.2"
   }
 }
